<resources>
    <string name="app_name">CiapOficial</string>
    <string name="POST">POST</string>
    <string name="GET">GET</string>
    <string name="sharedPreferences_token">token</string>
    <string name="email">Email</string>
    <string name="email_usuario">Email*</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="informe_o_email_para_recuperar_a_senha">Informe o email para recuperar a senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="desconectar">desconectar</string>
    <string name="info">Informações</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_completo">Nome Completo*</string>
    <string name="data_de_nascimento">Data de Nascimento*</string>
    <string name="data_de_nascimento_atendido_dependente_e_civil">Data de Nascimento</string>
    <string name="cpf">CPF*</string>
    <string name="telefone">Telefone*</string>
    <string name="proxima">Próxima</string>
    <string name="cep">CEP</string>
    <string name="cep_usuario">CEP*</string>
    <string name="estado">UF*</string>
    <string name="uf_dependente_civil">UF</string>
    <string name="cidade">Cidade*</string>
    <string name="cidade_dependente_civil">Cidade</string>
    <string name="numero">Número</string>
    <string name="numero_usuario">Número*</string>
    <string name="bairro">Bairro</string>
    <string name="bairro_usuario">Bairro*</string>
    <string name="logradouro">Logradouro</string>
    <string name="logradouro_usuario">Logradouro*</string>
    <string name="rg_militar">RG militar*</string>
    <string name="posto_grad_ou_categoria">Posto/Grad ou categoria*</string>
    <string name="nome_de_guerra">Nome de Guerra*</string>
    <string name="unidade">Unidade*</string>
    <string name="quadro">Quadro</string>
    <string name="quadro_usuario">Quadro*</string>
    <string name="especialidade">Especialidade*</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="pm">PM</string>
    <string name="dependente">Dependente</string>
    <string name="civil">Civil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_label">ciapOficial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funcao_administrativa">Função administrativa*</string>
    <string name="registro_conselho">Registro do Conselho sem a região*</string>
    <string name="digite_a_sua_nova_senha">Digite a sua nova senha</string>
    <string name="estado_civil">Estado civil</string>
    <string name="uf_de_origem">UF de origem</string>
    <string name="cidade_de_origem">Cidade de origem</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="numero_de_filhos">Número de filhos</string>
    <string name="vinculo">Vinculo*</string>
    <string name="situacao_funcional">Situção funcional*</string>
    <string name="data_de_inclusao">Data de inclusão</string>
    <string name="data_de_atendimento">Data de Atendimento</string>
    <string name="oficial_responsavel">Oficial responsavel</string>
    <string name="unidade_do_atendimento">Unidade do servico</string>
    <string name="modalidade">Modalidade</string>
    <string name="acesso_ao_atendimento">Acesso ao servico</string>
    <string name="tipo_de_servico">Tipo de serviço</string>
    <string name="tipo_de_atendimento">Tipo do servico</string>
    <string name="tipo_de_avaliacao">Tipo de Avaliação</string>
    <string name="programa">Programa</string>
    <string name="deslocamento">Deslocamento</string>
    <string name="demanda_geral">Demanda Geral</string>
    <string name="demanda_especifica">Demanda Específica</string>
    <string name="condicao_laboral">Condição laboral</string>
    <string name="documentos_produzidos">Documentos produzidos</string>
    <string name="documento_produzido">Documento produzido</string>
    <string name="tipo_de_encaminhamento">Tipo de encaminhamento</string>
    <string name="sinais_sintomas">Sinais/sintomas</string>
    <string name="destino_do_encaminhamento">Destino do encaminhamento</string>
    <string name="evolucao">Evolução</string>
    <string name="medicacao_psiquiatrica">Medicação psiquiátrica</string>
    <string name="procedimento">Procedimento</string>
    <string name="encaminhamento">Encaminhamento</string>
    <string name="data_de_atendimento_not_null">data de servico*</string>
    <string name="oficial_responsavel_not_null">oficial responsavel*</string>
    <string name="atendido_not_null">Atendido*</string>
    <string name="unidade_do_atendimento_not_null">unidade do servico*</string>
    <string name="modalidade_not_null">Modalidade*</string>
    <string name="acesso_ao_atendimento_not_null">Acesso ao servico*</string>
    <string name="tipo_de_atendimento_not_null">Tipo de servico*</string>
    <string name="demanda_geral_not_null">Demanda geral*</string>
    <string name="procedimento_not_null">Procedimento*</string>

    <string-array name="oficiais">
        <item>2° TEN LÊDA</item>
        <item>2° TEN NATHÁLIA</item>
        <item>2° TEN LEONARDO</item>
        <item>2° TEN NASCIMENTO</item>
        <item>2° TEN RAIANY</item>
    </string-array>

    <string-array name="usuarios">
        <item>ANA KODAMA</item>
        <item>RAFAEL SOUZA</item>
        <item>JOALDO FÉLIX</item>
    </string-array>

    <string-array name="modalidade">
        <item>Presencial</item>
        <item>Remota</item>
    </string-array>

    <string-array name="acesso_atendimento">
        <item>Espontâneo</item>
        <item>Retorno</item>
        <item>Busca ativa</item>
    </string-array>

    <string-array name="tipo_atendimento">
        <item>Atendimento psicológico</item>
        <item>Atendimento social</item>
        <item>Atendimento psicossocial</item>
        <item>Avaliação psicológica</item>
        <item>Avaliação social</item>
    </string-array>

    <string-array name="tipo_avaliacao">
        <item>Letalidade</item>
        <item>Pós-prisão</item>
        <item>RSO pós LTSP</item>
    </string-array>

    <string-array name="programas">
        <item>Acolher</item>
        <item>PASPM</item>
        <item>Assistir</item>
    </string-array>

    <string-array name="deslocamento">
        <item>Hospitalar</item>
        <item>Institucional</item>
        <item>Residencia</item>
    </string-array>

    <string-array name="demanda_geral">
        <item>Saúde</item>
        <item>Social</item>
        <item>Laboral</item>
    </string-array>

    <string-array name="demanda_especifica">
        <item>Óbito de militar</item>
        <item>Óbito de familiar</item>
        <item>Acidente motociclístico</item>
        <item>Luto</item>
    </string-array>


    <string-array name="condicao_laboral">
        <item>Em serviço</item>
        <item>Folga</item>
        <item>Não se aplica</item>
    </string-array>

    <string-array name="procedimentos">
        <item>Escuta ativa</item>
        <item>Orientação</item>
    </string-array>

    <string-array name="documentos_produzidos">
        <item>Atestado Psicológico</item>
        <item>Laudo social</item>
    </string-array>

    <string-array name="tipo_encaminhamento">
        <item>Interno</item>
        <item>Externo</item>
        <item>Interno e externo</item>
    </string-array>

    <string-array name="destino_encaminhamento">
        <item>AMC</item>
        <item>HPD</item>
    </string-array>

    <string-array name="sinais_sintomas">
        <item>Dor de cabeça</item>
        <item>Falta de ar</item>
    </string-array>

    <string-array name="medicacoes_psiquiatricas">
        <item>Fluxetina</item>
        <item>Escitalopram</item>
    </string-array>

    <string name="title_activity_detalhes_atendimento">DetalhesAtendimentoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="titular_hyperlink"><a href=""></a><u>ver prontuário</u></string>
    <string name="responsavel_cadastro_underline"><u>nome_responsavel</u></string>
    <string name="numero_filhos">Número de filhos</string>
    <string name="cadastrar_usuario">Cadastrar Usuário</string>
    <string name="ciap">CIAP</string>
    <string name="confirmar_senha">Digite sua senha atual</string>
    <string name="interno">Interno</string>
    <string name="externo">Externo</string>
</resources>