<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="Cadastrar Usuário"
        android:textSize="30sp"
        android:textColor="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/cep_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="number"
            android:nextFocusDown="@id/edtUf"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCep">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtUf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_seta_para_baixo"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/edtCidadeNatal"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCidadeNatal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUf">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtCidadeNatal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_seta_para_baixo"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/edtBairro"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bairro_usuario"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCidadeNatal"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="text"
            android:nextFocusDown="@id/edtLogradouro"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logradouro_usuario"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBairro"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="text"
            android:nextFocusDown="@id/edtNumero"
            tools:targetApi="jelly_bean" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_usuario"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogradouro"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNumero"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            tools:targetApi="jelly_bean" />


    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNumero" />

    <Button
        android:id="@+id/btnProxima"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/proxima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

</androidx.constraintlayout.widget.ConstraintLayout>
